# create-django-bridge

./: README.md  package-lock.json  package.json
src/: index.ts
template/: Makefile  docker-compose.yml
template/client/: Dockerfile  package.json  vite.config.ts
template/client/src/adapters/: Field.tsx  Form.tsx  ServerRenderedField.tsx
template/client/src/adapters/widgets/: Select.tsx  TextInput.tsx  base.tsx
template/client/src/components/: Field.tsx
template/server/: Dockerfile  manage.py  pyproject.toml
template/server/__project_name__/: asgi.py  settings.py  urls.py  wsgi.py
