[tool.poetry]
name = "__project_name__"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{ include = "__project_name__" }]

[tool.poetry.dependencies]
python = ">=3.12,<4"
django = "^5.2"
django-bridge = "^0.5"
psycopg = "^3.2.9"
dj-database-url = "^3.0.1"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
