[project]
name = "__project_name__"
version = "0.0.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.12,<4"
dependencies = [
    "django~=5.2",
    "django-bridge>=0.5,<0.6",
    "psycopg>=3.2.9,<4",
    "dj-database-url>=3.0.1,<4",
    "gunicorn>=23.0.0,<24",
]

[tool.hatch.build.targets.sdist]
include = ["__project_name__"]

[tool.hatch.build.targets.wheel]
include = ["__project_name__"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
